ports/stm32/err.log
dma.c: In function 'dma_init_handle':
dma.c:616:14: error: 'DMA_InitTypeDef {aka struct <anonymous>}' has no member named 'Channel'
     dma->Init.Channel = dma_descr->sub_instance;
              ^
At top level:
dma.c:121:30: error: 'dma_init_struct_dac' defined but not used [-Werror=unused-const-variable=]
 static const DMA_InitTypeDef dma_init_struct_dac = {
                              ^~~~~~~~~~~~~~~~~~~
dma.c:70:30: error: 'dma_init_struct_spi_i2c' defined but not used [-Werror=unused-const-variable=]
 static const DMA_InitTypeDef dma_init_struct_spi_i2c = {
                              ^~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
make: *** [build-STM32F3DISC/dma.o] Error 1
